# EPICproto

./: .gitignore  duplicate.cmake  local_plugin.list  online_conversion.sh  project.yaml
analysis/: Analysis.cxx  Analysis.h  CMakeLists.txt
calibration/: FC.cal
detector/: detector.yaml
fission-chamber/: CMakeLists.txt  README.md  plugin.yaml
fission-chamber/src/: CMakeLists.txt  FissionChamberData.cxx  FissionChamberData.h  FissionChamberDetector.cxx  FissionChamberDetector.h  FissionChamberGeant4.cxx  FissionChamberGeant4.h  FissionChamberPhysics.h  FissionChamberSpectra.cxx  FissionChamberSpectra.h  FissionChamberlinkdef.hh  SignalProcessorFC.cpp  SignalProcessorFC.h
macro/: RawEpic.C  RawEpic.h  RawEpicProto.C  RawEpicProto.h  ReadRawEpicConversionData.C  ReadRawEpicProtoData.C  rootlogon.C
pid_files/: sample_EPICproto_run1.pid  sample_EPICproto_run20.pid  sample_EPICproto_run4.pid  sample_PFNS_238U_nf.pid  sample_PFNS_240Pu_sf.pid
vendeta/: CMakeLists.txt  README.md  plugin.yaml
vendeta/src/: CMakeLists.txt  SignalProcessor.cpp  SignalProcessor.h  VendetaData.cxx  VendetaData.h  VendetaDetector.cxx  VendetaDetector.h  VendetaGeant4.cxx  VendetaGeant4.h  VendetaPhysics.h  VendetaSpectra.cxx  VendetaSpectra.h  Vendetalinkdef.hh
